scripts/tests/errors/err_break_outside_loop.bu
// Test: break outside of any loop  
// Expected: compile error

break
